[project]
name = "mcp-server-cronpilot"
version = "1.0.0"
description = "Managed cron-job-as-a-service with monitoring, retries, and alerting"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "croniter>=5.0.0",
    "apscheduler>=3.10.0,<4.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
cronpilot-api = "server:main"
cronpilot-mcp = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
